add media query to remove brand

--- a/css/style.css
+++ b/css/style.css
@@ -95,3 +95,10 @@ main>img {
   background-color: rgb(42, 182, 119);
   grid-column: 1 / 5;
 }
+
+
+@media only screen and (max-width: 1026px) {
+  #brand {
+      display: none;
+  }
+}
