--- a/css/style.css
+++ b/css/style.css
@@ -33,20 +33,23 @@ main {
 }
 
 #status {
-  justify-content: flex-end;
-  align-items: end;
+  /* max-height: 150px;
+  max-width: 200px;
+  width: 120px;
+  height: 120px; */
   color: darkgray;
   font-size: 17px;
   background-color: white;
   grid-column: 4 / 5;
 }
 
-main>img {
+#photo {
   border-radius: 50%;
   border: green;
   margin: 0 10px;
+  height: auto;
   justify-content: center;
-  grid-column: 3 / 4;
+  grid-column: 2 / 4;
 }
 
 #name {
@@ -56,19 +59,33 @@ main>img {
   align-items: end;
   grid-column: 1 / 5;
   background-color: white;
+  grid-template-columns: minmax(auto, 1200px);
+}
+
+h1{
+  margin: 0;
+}
+
+p {
+  margin: 0;
 }
 
 #occupation {
   display: flex;
   font-size: 10px;
   justify-content: center;
+  background-color: lightgray;
   align-items: end;
   grid-column: 1 / 5;
 }
 
 #brand {
-  justify-content: center;
+  display: flex;
+  font-size: 30px;
+  justify-content: ;
   align-items: center;
+  background-color: white;
+  grid-column: 1 / 5;
 }
 
 #offer {
@@ -80,11 +97,6 @@ main>img {
   grid-column: 1 / 5;
 }
 
-#brand > p {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 
 #contact {
