--- a/css/style.css
+++ b/css/style.css
@@ -23,40 +23,50 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
 main {
-  display: grid;
-  grid-template-columns: 33% 33% 33%;
-  grid-template-rows: 4% 24% 24% 24% 24%;
-  height: 100vh;
+  width: 300px;
+  background-color: white;
+  font-size: 2rem;
+  text-align: center;
 }
 
 #status {
   color: darkgray;
   font-size: 17px;
-  align-items: right;
+  align-items: stretch;
   background-color: white;
   grid-column: 1 / 5;
+  min-height: 18px;
+  text-align: right;
+}
+
+img {
+  border-radius: 50%;
+  border: rgb(65, 202, 141) 5px solid;
+  margin: 0 10px;
+  height: auto;
 }
 
 #photo {
-  border-radius: 50%;
-  border: green;
-  margin: 0 10px;
-  height: auto;
-  justify-content: ;
-  grid-column: 2 / 3;
+  min-height: 170px;
 }
 
 #name {
   display: flex;
-  font-size: 40px;
+  font-size: 36px;
   justify-content: center;
   align-items: end;
   grid-column: 1 / 5;
   background-color: white;
   grid-template-columns: minmax(auto, 1200px);
+  max-height: 30px;
 }
 
 h1{
@@ -69,11 +79,15 @@ h1{
 
 #occupation {
   display: flex;
-  font-size: 35px;
+  font-size: 20px;
+  align-items: center;
   justify-content: center;
   background-color: lightgray;
-  align-items: end;
-  grid-column: 1 / 5;
+  min-height: 80px;
+}
+
+#occupation > p {
+  margin: 0;
 }
 
 #brand {
@@ -82,32 +96,70 @@ h1{
   justify-content: ;
   align-items: center;
   background-color: white;
-  grid-column: 1 / 5;
+}
+
+#brand {
+  display: none;
 }
 
 #offer {
   display: flex;
-  font-size: 30px;
+  font-size: 20px;
   justify-content: center;
   align-items: center;
   background-color: white;
-  grid-column: 1 / 5;
+  max-height: 80px;
 }
-
-
 
 #contact {
   display: flex;
   font-size: 40px;
   justify-content: space-around;
   align-items: center;
-  background-color: rgb(42, 182, 119);
-  grid-column: 1 / 5;
+  background-color: rgb(65, 202, 141);
+  max-height: 70px;
 }
 
 
-@media only screen and (max-width: 1026px) {
-  #brand {
-      display: none;
+@media only screen and (min-width: 600px) {
+  main {
+    display: grid;
+    text-align: left;
+    width: 550px;
+    grid-template-columns: 40% 60%;
+    grid-template-rows: auto auto auto auto;
+    
   }
+  
+  
+
+  #status {
+    
+  }
+  
+  img {
+    
+  }
+  
+  #brand {
+    
+  }
+
+  #contact {
+    
+  }
+
+
+  #brand > p {
+    
+  }
+
+  #offer {
+    
+  }
+
+  #name, #occupation, #brand, #offer {
+    
+  }
+  
 }
