--- a/css/style.css
+++ b/css/style.css
@@ -127,8 +127,13 @@ h1{
     text-align: left;
     width: 550px;
     grid-template-columns: 40% 60%;
-    grid-template-rows: auto auto auto auto;
-    
+    grid-template-rows: 25% 25% 25% 25%;
+    max-height: 300px;
+    grid-template-areas: 
+    "status name"
+    "img occupation"
+    "img brand" 
+    "contact offer";
   }
   
   
@@ -142,29 +147,47 @@ h1{
   
   }
   
+  #name {
+    grid-area: name;
+    grid-column: 2 / 4;
+  }
  
+  h1 {
+    margin: auto;
+  }
+  #photo {
+    grid-area: img;
+  }
 
-  #contact {
-    grid-column: 1 / 2;
+  #occupation {
+    grid-column: 2 / 4;
+    grid-area: occupation;
   }
 
   #brand {
     display: inline;
+    margin: 0;
+    grid-column: 2 / 4;
+    grid-area: brand;
   }
  
   #brand > p {
     border-left: green 4px solid;
-    padding: 0 20px 0 8px;
-    font-size: 1.6rem;
+    font-size: 20px;
+    background-color: lightgray;
   }
+  
+  #contact {
+    grid-column: 1 / 2;
+    grid-area: contact;
+  }
+
  
 
   #offer {
-    
-  }
-
-  #name, #occupation, #brand, #offer {
     grid-column: 2 / 4;
   }
+
+ 
   
 }
