--- a/css/style.css
+++ b/css/style.css
@@ -140,20 +140,38 @@ h1{
 
   #status {
     text-align: left;
+    grid-area: status;
+    max-height: 100px;
   }
   
   img {
     margin: 0 auto;
-  
+    grid-area: img;
+    
+  }
+
+  #photo {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
   }
   
   #name {
+    display: flex;
+    font-size: 20px;
+    align-items: center;
+    justify-content: center;
+    max-height: 100px;
+    font-size: 42px;
     grid-area: name;
     grid-column: 2 / 4;
+    background-color: rgb(219, 217, 217);
   }
  
   h1 {
-    margin: auto;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+    background-color: rgb(219, 217, 217);
   }
   #photo {
     grid-area: img;
@@ -162,6 +180,7 @@ h1{
   #occupation {
     grid-column: 2 / 4;
     grid-area: occupation;
+    background-color: rgb(219, 217, 217);
   }
 
   #brand {
@@ -169,23 +188,25 @@ h1{
     margin: 0;
     grid-column: 2 / 4;
     grid-area: brand;
+    background-color: rgb(219, 217, 217);
   }
  
   #brand > p {
     border-left: green 4px solid;
-    font-size: 20px;
-    background-color: lightgray;
+    font-size: 15px;
+    background-color: rgb(219, 217, 217);
+
   }
-  
+
   #contact {
     grid-column: 1 / 2;
     grid-area: contact;
   }
 
- 
-
   #offer {
     grid-column: 2 / 4;
+    grid-area: offer;
+    background-color: rgb(219, 217, 217);
   }
 
  
