--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,7 @@ h1{
     display: flex;
     align-items: flex-start;
     justify-content: center;
+    
   }
   
   #name {
@@ -198,6 +199,7 @@ h1{
     display: inline;
     margin: 0;
     grid-column: 2 / 4;
+    padding-left: 20px;
     grid-area: brand;
     background-color: rgb(219, 217, 217);
   }
@@ -205,6 +207,8 @@ h1{
   #brand > p {
     border-left: green 4px solid;
     font-size: 15px;
+    padding: 0 15px 10px;
+    
     background-color: rgb(219, 217, 217);
 
   }
